validatie username met database toegevoegd

--- a/parque_banque_server/src/main/resources/templates/confirmsignup.html
+++ b/parque_banque_server/src/main/resources/templates/confirmsignup.html
@@ -55,7 +55,7 @@
             </tr>
             <tr>
                 <td> <button type="submit" name="action" value="edit">Wijzig gegevens</button> </td>
-                <td> <button type="submit" name="action" value="send">Volgende</button> </td>
+                <td> <button type="submit" name="action" value="createaccount">Volgende</button> </td>
             </tr>
             <tr>
                 <td> <button type="submit" name="action" value="cancel" formnovalidate>Annuleren</button> </td>
