--- a/parque_banque_server/src/main/resources/templates/confirmsignup.html
+++ b/parque_banque_server/src/main/resources/templates/confirmsignup.html
@@ -1,10 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Bevestig gegevens - Parque Banque</title>
 </head>
 <body>
-
+    <h1>Bevestig uw gegevens</h1>
+    <h3>Controleer uw gegevens zorgvuldig. Als u er zeker van bent dat u alles correct hebt ingevuld, klik dan op Volgende</h3>
+    <form th:action="@{/klant-worden}" th:object="${form}" method="post">
+        <table>
+            <tr>
+                <td> <label for="firstName">Voornaam</label> </td>
+                <td> <input id="firstName" type="text" readonly th:field="${form.firstName}" /> </td>
+            </tr>
+            <tr>
+                <td> <label for="infix">Tussenvoegsel</label> </td>
+                <td> <input id="infix" type="text" readonly th:field="${form.infix}" /> </td>
+            </tr>
+            <tr>
+                <td> <label for="lastName">Achternaam</label> </td>
+                <td> <input id="lastName" type="text" readonly th:field="${form.lastName}" /> </td>
+            </tr>
+            <tr>
+                <td> <label for="bsn">Burger Service Nummer</label> </td>
+                <td> <input id="bsn" type="text" readonly th:field="${form.bsn}"/></td>
+            </tr>
+            <tr>
+                <td> <label for="street">Straatnaam</label> </td>
+                <td> <input id="street" type="text" readonly th:field="${form.street}"/> </td>
+            </tr>
+            <tr>
+                <td> <label for="number">Huisnummer</label> </td>
+                <td> <input id="number" type="text" readonly th:field="${form.number}" /> </td>
+            </tr>
+            <tr>
+                <td> <label for="addition">Toevoeging</label> </td>
+                <td> <input id="addition" type="text" readonly th:field="${form.addition}" /> </td>
+            </tr>
+            <tr>
+                <td> <label for="postcode">Postcode</label> </td>
+                <td> <input id="postcode" type="text" readonly th:field="${form.zipcode}" /> </td>
+            </tr>
+            <tr>
+                <td> <label for="city">Woonplaats</label> </td>
+                <td> <input id="city" type="text" readonly th:field="${form.city}" /> </td>
+            </tr>
+            <tr>
+                <td> <label for="phone">Telefoon nummer</label></td>
+                <td> <input id="phone" type="tel" readonly th:field="${form.phone}" /></td>
+            </tr>
+            <tr>
+                <td> <label for="email">Email</label></td>
+                <td> <input id="email" type="email" readonly th:field="${form.emailAddress}" /> </td>
+            </tr>
+            <tr>
+                <td> <button type="submit" name="action" value="edit">Wijzig gegevens</button> </td>
+                <td> <button type="submit" name="action" value="send">Volgende</button> </td>
+            </tr>
+            <tr>
+                <td> <button type="submit" name="action" value="cancel" formnovalidate>Annuleren</button> </td>
+            </tr>
+        </table>
+    </form>
 </body>
 </html>
