--- a/parque_banque_server/src/main/resources/templates/signup.html
+++ b/parque_banque_server/src/main/resources/templates/signup.html
@@ -1,10 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Nieuwe klant - Parque Banque</title>
 </head>
 <body>
+    <h1>Welkom!</h1>
+    <h3>Vul hier uw gegevens in</h3>
+    <form action="#" th:action="@{/klant-worden}" th:object="${signUpFormBean}" method="post">
+        <table>
+            <tr>
+                <td> <label for="firstName">Voornaam</label> </td>
+                <td> <input id="firstName" type="text" required pattern="^[- 'A-Za-zÀ-ÖØ-öø-ÿ]+$" th:field="*{firstName}"
+                            oninvalid="setCustomValidity('Voornaam is verplicht')"
+                            oninput="setCustomValidity('')"/> </td>
+            </tr>
+            <tr>
+                <td> <label for="infix">Tussenvoegsel</label> </td>
+                <td> <input id="infix" type="text" th:field="*{infix}" /> </td>
+            </tr>
+            <tr>
+                <td> <label for="lastName">Achternaam</label> </td>
+                <td> <input id="lastName" type="text" required pattern="^[-'A-Za-zÀ-ÖØ-öø-ÿ]+$" th:field="*{lastName}"
+                            oninvalid="setCustomValidity('Achternaam is verplicht')"
+                            oninput="setCustomValidity('')" /> </td>
+            </tr>
+            <tr>
+                <td> <label for="bsn">Burger Service Nummer</label> </td>
+                <td> <input id="bsn" type="text" required pattern="[0-9]{9}" th:field="*{bsn}"
+                            title="Vul uw BSN in"
+                            oninvalid="setCustomValidity('Vul een geldig BSN in')"
+                            oninput="setCustomValidity('')"/></td>
+            </tr>
+            <tr>
+                <td> <label for="street">Straatnaam</label> </td>
+                <td> <input id="street" type="text" required pattern="[A-Z. a-z-]{2,50}" th:field="*{street}"
+                            title="Minstens 2 karakters"
+                            oninvalid="setCustomValidity('Straatnaam is verplicht (minstens 2 karakters)')"
+                            oninput="setCustomValidity('')" /> </td>
+            </tr>
+            <tr>
+                <td> <label for="number">Huisnummer</label> </td>
+                <td> <input id="number" type="text" required pattern="[1-9][0-9]{0,4}" th:field="*{number}"
+                            oninvalid="setCustomValidity('Huisnummer is verplicht')"
+                            oninput="setCustomValidity('')" /> </td>
+            </tr>
+            <tr>
+                <td> <label for="addition">Toevoeging</label> </td>
+                <td> <input id="addition" type="text" pattern="[1-9a-zA-Z]" th:field="*{addition}"
+                            oninvalid="setCustomValidity('Toevoeging kan maar 1 karakter hebben')"
+                            oninput="setCustomValidity('')" /> </td>
+            </tr>
+            <tr>
+                <td> <label for="postcode">Postcode</label> </td>
+                <td> <input id="postcode" type="text" required pattern="[1-9][0-9]{3}[A-Za-z]{2}" th:field="*{zipcode}"
+                            title="Postcode moet zonder spaties ingevuld worden (bijvoorbeeld 1111AB)"
+                            oninvalid="setCustomValidity('Postcode moet zonder spaties ingevuld worden (bijv 1111AB)')"
+                            oninput="setCustomValidity('')"/> </td>
+            </tr>
+            <tr>
+                <td> <label for="city">Woonplaats</label> </td>
+                <td> <input id="city" type="text" required pattern="[A-Za-z-' ]{2,}" th:field="*{city}"
+                            oninvalid="setCustomValidity('Woonplaats is verplicht')"
+                            oninput="setCustomValidity('')" /> </td>
+            </tr>
+            <tr>
+                <td> <label for="phone">Telefoon nummer</label></td>
+                <td> <input id="phone" type="tel" pattern="[0][0-9]{9}" th:field="*{phone}"
+                            title="Geef een Nederlands telefoonnummer op (zonder streepje)"
+                            oninvalid="setCustomValidity('Geef een Nederlands telefoonnummer op (zonder streepje)')"
+                            oninput="setCustomValidity('')" /> </td>
+            </tr>
+            <tr>
+                <td> <label for="email">Email</label></td>
+                <td> <input id="email" type="email" th:field="*{emailAddress}"
+                            oninvalid="setCustomValidity('Geef een geldig email adres op')"
+                            oninput="setCustomValidity('')" /> </td>
+            </tr>
+            <tr>
+                <td>  </td>
+                <td> <input type="submit" value="Volgende"> </td>
+            </tr>
+            <tr>
+                <td> <button type="submit" name="action" value="cancel" formnovalidate>Annuleren</button> </td>
+            </tr>
+        </table>
+    </form>
 
 </body>
 </html>
