LoginEmployee aangepast voor communicatie juiste gegevens.

--- a/parque_banque_server/src/main/resources/templates/logincustomer.html
+++ b/parque_banque_server/src/main/resources/templates/logincustomer.html
@@ -29,6 +29,9 @@
         <br/> <br/>
 
         <input type="submit" value="Log In"/>
+        <br/> <br/>
+
+        Nog geen klant? Klik dan <a href="/klant-worden">hier</a> en wordt klant!
     </form>
 </body>
 </html>
