--- a/parque_banque_server/src/main/resources/templates/index.html
+++ b/parque_banque_server/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
 <header class="header">
     <nav class="header nav">
             <!-- logo met link-->
-            <a href="/" class="logolink"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque" class="logolink" width="80" height="45"></a>
+            <a href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque" class="logolink"></a>
             <div align="right"><a href="/contact" class="pbNav-button">Contact>></a></div>
     </nav>
 </header>
