--- a/parque_banque_server/src/main/resources/templates/accountview.html
+++ b/parque_banque_server/src/main/resources/templates/accountview.html
@@ -23,9 +23,9 @@
     <meta charset="UTF-8">
     <title>rekeningoverzicht</title>
     <img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque" class="logolink" width="80" height="45">
-    <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
+
 </head>
-<h1>Welkom <span>th:text="${name}"</span></h1>
+<h1>Welkom <span th:text="${firstName}"/> <span th:text="${affix}"/> <span th:text="${surName}"/></h1>
 <br/>
 <br/>
 <br/>
@@ -61,10 +61,9 @@
         <td>Saldo</td>
     </tr>
     <tr>
-        <td><span th: text="${affix}"/> <span th: text="${surname}"/></td>
-        <td><span th: text="${iban}"/></td>
-        <td><span th: text="${balanceCent}"/></td>
-    </tr>
+<!--        <td><span th:text="${name}"/></td>-->
+<!--        <td><span th: text="${iban}"/></td>-->
+<!--        <td><span th: text="${balanceCent}"/></td>    </tr>-->
 </table>
 
 <table>
