--- a/parque_banque_server/src/main/resources/templates/signup.html
+++ b/parque_banque_server/src/main/resources/templates/signup.html
@@ -12,17 +12,19 @@
             <tr>
                 <td> <label for="firstName">Voornaam</label> </td>
                 <td> <input id="firstName" type="text" required pattern="^[- 'A-Za-zÀ-ÖØ-öø-ÿ]{2,30}$" th:field="*{firstName}"
-                            oninvalid="setCustomValidity('Voornaam is verplicht')"
+                            title="Vul uw voornaam in"
+                            oninvalid="setCustomValidity('Voornaam is verplicht (maximaal 30 tekens)')"
                             oninput="setCustomValidity('')"/> </td>
             </tr>
             <tr>
                 <td> <label for="infix">Tussenvoegsel</label> </td>
-                <td> <input id="infix" type="text" th:field="*{infix}" /> </td>
+                <td> <input id="infix" type="text" th:field="*{infix}" title="Vul uw tussenvoegsel in" /> </td>
             </tr>
             <tr>
                 <td> <label for="lastName">Achternaam</label> </td>
                 <td> <input id="lastName" type="text" required pattern="^[- 'A-Za-zÀ-ÖØ-öø-ÿ]{2,50}$" th:field="*{lastName}"
-                            oninvalid="setCustomValidity('Achternaam is verplicht')"
+                            title="Vul uw achternaam in"
+                            oninvalid="setCustomValidity('Achternaam is verplicht (maximaal 50 tekens)')"
                             oninput="setCustomValidity('')" /> </td>
             </tr>
             <tr>
@@ -35,46 +37,50 @@
             <tr>
                 <td> <label for="street">Straatnaam</label> </td>
                 <td> <input id="street" type="text" required pattern="[-.' A-Za-z]{2,50}" th:field="*{street}"
-                            title="Minstens 2 karakters"
-                            oninvalid="setCustomValidity('Straatnaam is verplicht (minstens 2 karakters)')"
+                            title="Vul uw straatnaam in"
+                            oninvalid="setCustomValidity('Straatnaam is verplicht (minstens 2 tekens)')"
                             oninput="setCustomValidity('')" /> </td>
             </tr>
             <tr>
                 <td> <label for="number">Huisnummer</label> </td>
                 <td> <input id="number" type="text" required pattern="[1-9][0-9]{0,4}" th:field="*{number}"
+                            title="Vul uw huisnummer in"
                             oninvalid="setCustomValidity('Huisnummer is verplicht')"
                             oninput="setCustomValidity('')" /> </td>
             </tr>
             <tr>
                 <td> <label for="addition">Toevoeging</label> </td>
-                <td> <input id="addition" type="text" pattern="[1-9a-zA-Z]" th:field="*{addition}"
-                            oninvalid="setCustomValidity('Toevoeging kan maar 1 karakter hebben')"
+                <td> <input id="addition" type="text" pattern="[-1-9a-zA-Z]{1,3}" th:field="*{addition}"
+                            title="Vul uw toevoeging in (maximaal 3 tekens)"
+                            oninvalid="setCustomValidity('Toevoeging kan maar 3 tekens lang zijn')"
                             oninput="setCustomValidity('')" /> </td>
             </tr>
             <tr>
                 <td> <label for="postcode">Postcode</label> </td>
                 <td> <input id="postcode" type="text" required pattern="[1-9][0-9]{3}[A-Za-z]{2}" th:field="*{zipcode}"
                             title="Postcode moet zonder spaties ingevuld worden (bijvoorbeeld 1111AB)"
-                            oninvalid="setCustomValidity('Postcode moet zonder spaties ingevuld worden (bijv 1111AB)')"
+                            oninvalid="setCustomValidity('Postcode moet zonder spaties ingevuld worden (bijvoorbeeld 1111AB)')"
                             oninput="setCustomValidity('')"/> </td>
             </tr>
             <tr>
                 <td> <label for="city">Woonplaats</label> </td>
                 <td> <input id="city" type="text" required pattern="[-' A-Za-z]{2,}" th:field="*{city}"
+                            title="Vul uw woonplaats in"
                             oninvalid="setCustomValidity('Woonplaats is verplicht')"
                             oninput="setCustomValidity('')" /> </td>
             </tr>
             <tr>
                 <td> <label for="phone">Telefoon nummer</label></td>
                 <td> <input id="phone" type="tel" pattern="[0][0-9]{9}" th:field="*{phone}"
-                            title="Geef een Nederlands telefoonnummer op (zonder streepje)"
+                            title="Vul uw telefoonnummer in (zonder streepje)"
                             oninvalid="setCustomValidity('Geef een Nederlands telefoonnummer op (zonder streepje)')"
                             oninput="setCustomValidity('')" /> </td>
             </tr>
             <tr>
                 <td> <label for="email">Email</label></td>
                 <td> <input id="email" type="email" th:field="*{emailAddress}"
-                            oninvalid="setCustomValidity('Geef een geldig email adres op')"
+                            title="Vul uw email-adres in"
+                            oninvalid="setCustomValidity('Geef een geldig email-adres op')"
                             oninput="setCustomValidity('')" /> </td>
             </tr>
             <tr>
