--- a/parque_banque_server/src/main/resources/templates/contact.html
+++ b/parque_banque_server/src/main/resources/templates/contact.html
@@ -20,20 +20,30 @@
 </header>
 
 <!-- body -->
-<main id="content">
-    <div class="pbMain"align="center">
-        <img src="../static/parque-banque-logo.jpg" th:src="@{parque-banque-logo.jpg}" alt="parque banque" width="1000" height="165">
+<h1>Parque Banque <img src="../static/green-heart.png" th:src="@{green-heart.png}" width="74px" height="74px"> van klanten</h1>
+<p>Daarom is zaken doen met ons 'like a walk in the park'</p>
 
-        <h1>Welkom bij Parque Banque!</h1>
-        <a href="/inloggen">Inloggen</a>
-        <a href="/klant-worden">Klant worden</a>
-    </div>
-</main>
+<h2>Online</h2>
+<p>
+    Een nieuwe betaalrekening opent u bij ons gemakkelijk online<br>
+    Overboeken? 24/7 beschikbaar met enkele klikken heeft u het geregeld!<br>
+</p>
+<h2>Bezoekadres</h2>
+<p>
+    Bij ons kunt u nog ouderwets op de koffie komen en uw vragen stellen<br>
+    Er zit altijd een medewerkers voor uw klaar op één van onze Parque Banques
+</p>
+<address>
+    Parque Banque<br>
+    Parklaan 1056<br>
+    1919 CO Bankert <br>
+</address>
+
 
 <!-- footer -->
 <footer>
-    <div class="footer-links">
-        <ul>
+    <div class="content">
+        <ul class="footer-list">
             <li><a href="/inloggen">Inloggen</a></li>
             <li><a href="/klant-worden">Klant worden</a></li>
             <li><a href="/rekening-openen">Rekening openen</a></li>
@@ -44,7 +54,7 @@
         <address>
             Parque Banque<br>
             Parklaan 1056<br>
-            0000 XY Bankert <br>
+            1919 CO Bankert <br>
         </address>
     </div>
 
