Scenario zakelijke rekening openen - klant heeft al zakelijke rekeningen
Maakt een view met controller aan die alle bedrijven toont
Bedrijven zijn de bedrijven waar klant al rekeningen voor heeft
Maakt een methode om van de customerId in de sessie een customer te maken

--- a/parque_banque_server/src/main/resources/templates/confirmcompany.html
+++ b/parque_banque_server/src/main/resources/templates/confirmcompany.html
@@ -18,7 +18,7 @@
 <div align="left">
     <span>KVK-nummer:</span><span th:text="${companyFormBean.kvkNr}"></span><br>
     <span>BTW-nummer:</span><span th:text="${companyFormBean.btwNr}"></span><br>
-    <span>Bedrijfsnaam:</span><span th:text="${companyFormBean.companyName}"></span><br>
+    <span>Bedrijfsnaam:</span><span th:text="${companyFormBean.name}"></span><br>
     <span>Sector:</span><span th:text="${companyFormBean.sectorName}"></span><br>
 </div>
 
