--- a/parque_banque_server/src/main/resources/templates/newcompany.html
+++ b/parque_banque_server/src/main/resources/templates/newcompany.html
@@ -30,7 +30,7 @@
     <input type="text" th:field="*{btwNr}">
         <br><br>
     <label>Bedrijfsnaam</label>
-    <input type="password" th:field="*{companyName}">
+    <input type="password" th:field="*{name}">
         <br><br>
     <label>Sector</label>
     <select th:field="*{sectorName}">
