tussentijdse aanpassing tonen naam op accountview

--- a/parque_banque_server/src/main/resources/templates/accountview.html
+++ b/parque_banque_server/src/main/resources/templates/accountview.html
@@ -3,7 +3,8 @@
 <style>
     table {
        alignment: center;
-        width: auto;
+        width: 100%;
+        border: 1px solid black
     }
     td{
         font-family: "Arial";
@@ -79,8 +80,8 @@
         <td>Saldo</td>
     </tr>
     <tr>
-<!--        <td><span th:text="${name}"/></td>-->
-<!--        <td><span th: text="${iban}"/></td>-->
+        <td><span th:text="Jan"/></td>
+        <td><span th:text="${name}"/></td>-->
 <!--        <td><span th: text="${balanceCent}"/></td>    </tr>-->
 </table>
 <br/>
