--- a/parque_banque_server/src/main/resources/templates/accountview.html
+++ b/parque_banque_server/src/main/resources/templates/accountview.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <style>
     table {
-       alignment: center;
+        alignment: center;
         width: 100%;
         border: 1px solid black
     }
@@ -81,7 +81,7 @@
     </tr>
     <tr>
         <td><span th:text="Jan"/></td>
-        <td><span th:text="${name}"/></td>-->
+        <td><span th:text="${name}"/></td>
 <!--        <td><span th: text="${balanceCent}"/></td>    </tr>-->
 </table>
 <br/>
