--- a/parque_banque_server/src/main/resources/templates/newbusinessaccount.html
+++ b/parque_banque_server/src/main/resources/templates/newbusinessaccount.html
@@ -16,7 +16,7 @@
 </p>
 
 <p>Wilt u een rekening openen voor een ander bedrijf? Meld dan eerst het bedrijf bij ons aan.</p>
-<p>Button</p>
+<a href="/bedrijf-aanmaken">Meld hier een nieuw bedrijf aan</a>
 <!--Deze knop leidt naar een pagina waar Klant een nieuw bedrijf kan aanmelden-->
 
 </body>
