--- a/parque_banque_server/src/main/resources/templates/accountview.html
+++ b/parque_banque_server/src/main/resources/templates/accountview.html
@@ -80,7 +80,7 @@
         <td>Saldo</td>
     </tr>
     <tr th:each="paymentaccount : ${paymentaccounts}">
-        <td><span th:text="{paymentaccount.iban}"/></td>
+        <td><span th:text="${paymentaccount}"/></td>
         <td><span th:text="${firstName}"/> <span th:text="${affix}"/> <span th:text="${surName}"/></td>
         <td><span th:text="${paymentaccount.balanceCent}"/></td>
     </tr>
