--- a/parque_banque_server/src/main/resources/templates/newcompany.html
+++ b/parque_banque_server/src/main/resources/templates/newcompany.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <title>Nieuw bedrijf aanmaken bij Parque Banque</title>
     <style type="text/css">
+        img{
+            display: inline-block;
+            height: 50px;
+        }
         label {
             display: inline-block;
             width: 100px;
@@ -14,10 +18,13 @@
         button {
             padding: 5px;
             margin: 10px;
+            background-color: #37AD49;
         }
+
     </style>
 </head>
 <body>
+<img src="../static/logo-small.png"/>
 <h1>Bedrijf aanmelden bij Parque Banque</h1>
 <p>Vul hieronder de gegevens in van het bedrijf waarvoor u een rekening wilt openen:</p><br>
 
