aanmaken privaterepository en privateservice en andere aanpassingen tbv tonen van tabel met iban saldo en naam

--- a/parque_banque_server/src/main/resources/templates/accountview.html
+++ b/parque_banque_server/src/main/resources/templates/accountview.html
@@ -79,10 +79,10 @@
         <td>Rekeninghouder</td>
         <td>Saldo</td>
     </tr>
-    <tr th:each="paymentaccount : ${paymentaccounts}">
-        <td><span th:text="${paymentaccount}"/></td>
-        <td><span th:text="${firstName}"/> <span th:text="${affix}"/> <span th:text="${surName}"/></td>
-        <td><span th:text="${paymentaccount.balanceCent}"/></td>
+    <tr th:each="privateaccount: ${privateaccounts}">
+        <td th:text="${privateaccount.iban}"><span th:value="${privateaccount}" th:text="${privateaccount.iban}"/></td>
+<!--        <td><span th:text="${firstName}"/> <span th:text="${affix}"/> <span th:text="${surName}"/></td>-->
+        <td><span th:text="${privateaccount.balanceCent}"/></td>
     </tr>
 </table>
 <br/>
