Basisopzet NewBusinessAccountController met Sessie-attribuut

--- a/parque_banque_server/src/main/resources/templates/newcompany.html
+++ b/parque_banque_server/src/main/resources/templates/newcompany.html
@@ -18,7 +18,9 @@
         button {
             padding: 5px;
             margin: 10px;
+            border: none;
             background-color: #37AD49;
+            color: white;
         }
 
     </style>
