--- a/parque_banque_server/src/main/resources/templates/confirmcompany.html
+++ b/parque_banque_server/src/main/resources/templates/confirmcompany.html
@@ -12,7 +12,9 @@
         button {
             padding: 5px;
             margin: 10px;
+            border: none;
             background-color: #37AD49;
+            color: white;
         }
     </style>
 </head>
