kleine aanpassingen controller nieuwe zakelijke rekening

--- a/parque_banque_server/src/main/resources/templates/accountview.html
+++ b/parque_banque_server/src/main/resources/templates/accountview.html
@@ -79,11 +79,11 @@
         <td>Rekeninghouder</td>
         <td>Saldo</td>
     </tr>
-    <tr th:each="paymentaccount : ${paymentaccounts}">
+    <!--<tr th:each="paymentaccount : ${paymentaccounts}">
         <td><span th:text="${paymentaccount}"/></td>
         <td><span th:text="${firstName}"/> <span th:text="${affix}"/> <span th:text="${surName}"/></td>
         <td><span th:text="${paymentaccount.balanceCent}"/></td>
-    </tr>
+    </tr>-->
 </table>
 <br/>
 <br/>
