--- a/parque_banque_server/src/main/resources/templates/newpaymentaccount.html
+++ b/parque_banque_server/src/main/resources/templates/newpaymentaccount.html
@@ -12,9 +12,7 @@
     <input type="submit" value="Particulier">
 </form>
 
-<form action="zakelijke-rekening-openen">
-    <input type="submit" value="Zakelijk">
-</form>
+<a href="/zakelijke-rekening"> open een zakelijke rekening</a>
 
 </body>
 </html>
