--- a/parque_banque_server/src/main/resources/templates/newcompany.html
+++ b/parque_banque_server/src/main/resources/templates/newcompany.html
@@ -10,15 +10,25 @@
             height: 50px;
         }
         label {
+            font-family: Segoe;
             display: inline-block;
             width: 100px;
             margin: 5px;
             text-align: left;
         }
+        h1 {
+            font-family: "Segoe";
+        }
+        p{
+            font-family: Segoe;
+        }
         button {
             padding: 5px;
             margin: 10px;
-            border: none;
+            border-left: none;
+            border-right: none;
+            border-top: none;
+            border-bottom-color: #242121;
             background-color: #37AD49;
             color: white;
         }
@@ -39,7 +49,7 @@
     <input type="text" th:field="*{btwNr}">
         <br><br>
     <label>Bedrijfsnaam</label>
-    <input type="password" th:field="*{companyName}">
+    <input type="text" th:field="*{name}">
         <br><br>
     <label>Sector</label>
     <select th:field="*{sectorName}">
