--- a/parque_banque_server/src/main/resources/templates/newbusinessaccount.html
+++ b/parque_banque_server/src/main/resources/templates/newbusinessaccount.html
@@ -11,8 +11,8 @@
 <form action="#" th:action="@{/open-zakelijke-rekening}" method="post" th:object="${company}">
     <p>
         <label for="company">Bedrijfsnaam</label>
-        <select id="company" th:field="*{name}">
-            <option th:each="c:${companies}" th:value="${c}" th:text="${c.getName()}"></option>
+        <select id="company" th:field="*{kvk}">
+            <option th:each="c:${companies}" th:value="${c.getKvkNr()}" th:text="${c.getName()}"></option>
         </select>
     </p>
     <button type="submit" name="action" value="submit">Bevestig openen rekening</button>
